--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -11,23 +11,18 @@ cmake_minimum_required(VERSION 3.22.1)
 # build script scope).
 project("DukunLangit")
 
-# Creates and names a library, sets it as either STATIC
-# or SHARED, and provides the relative paths to its source code.
-# You can define multiple libraries, and CMake builds them for you.
-# Gradle automatically packages shared libraries with your APK.
-#
-# In this top level CMakeLists.txt, ${CMAKE_PROJECT_NAME} is used to define
-# the target library name; in the sub-module's CMakeLists.txt, ${PROJECT_NAME}
-# is preferred for the same purpose.
-#
-# In order to load a library into your app from Java/Kotlin, you must call
-# System.loadLibrary() and pass the name of the library defined here;
-# for GameActivity/NativeActivity derived applications, the same library name must be
-# used in the AndroidManifest.xml file.
-add_library(${CMAKE_PROJECT_NAME} SHARED
-        # List C/C++ source files with relative paths to this CMakeLists.txt.
-        main.cpp
-        Langit/ELFLoader/elfLoader.cpp
+set(SRC_DIR ${CMAKE_SOURCE_DIR}/DukunLangit)
+
+file(GLOB_RECURSE DUKUNLANGIT_SRC "${SRC_DIR}/*.cpp" "${SRC_DIR}/*.h")
+
+include_directories(${SRC_DIR})
+
+add_library(
+        ${CMAKE_PROJECT_NAME}
+        SHARED
+        ${DUKUNLANGIT_SRC}
+#        main.cpp
+#        DukunLangit/ELFLoader/elfLoader.cpp
 )
 find_library(log-lib log)
 # Specifies libraries CMake should link to your target library. You
