--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,9 @@ dependencies {
     implementation libs.androidx.media3.datasource
     implementation libs.androidx.media3.exoplayer
     implementation libs.androidx.media3.exoplayer.hls
+    implementation libs.jelf
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
 }
